<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_kotak2"
    tools:context="com.example.fathia.myapplication.MainActivity">
    
    <RelativeLayout
        android:id="@+id/layout_kotak"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/sampul">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/camera_icon"/>

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/friends_picture"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/usename"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/username_profile"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_picture"
            android:layout_marginTop="16dp"/>
        
        <Button
            android:id="@+id/btn_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            android:hint="FOLLOW"
            android:background="@color/registerBox"
            android:layout_alignBottom="@+id/usename"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="225dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/layout_kotak"
        android:background="@color/colorAccent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">


        <ImageView
            android:id="@+id/img_call"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/call"
            />

        <TextView
            android:id="@+id/txt_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp"
            android:layout_toRightOf="@+id/img_call"
            android:textSize="30dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="16dp"/>


        <ImageView
            android:id="@+id/img_msg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/message"
            android:layout_below="@+id/img_call"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="24dp"
            android:textColorHint="@color/text_color"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignBottom="@+id/img_msg"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
